# parasramka_erpnext

./: CLAUDE.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.claude/: settings.local.json
parasramka_erpnext/: hooks.py  modules.txt  patches.txt
parasramka_erpnext/config/: desktop.py
parasramka_erpnext/doctype/co7_tracker/: co7_tracker.json
parasramka_erpnext/doctype/deploy_test/: deploy_test.js  deploy_test.json  deploy_test.py
parasramka_erpnext/parasramka_erpnext/api/: claude_integration.py
parasramka_erpnext/parasramka_erpnext/config/: desktop.py
parasramka_erpnext/parasramka_erpnext/doc_events/: delivery_note.py  sales_invoice.py  sales_order.py
parasramka_erpnext/parasramka_erpnext/doctype/co7_tracker/: co7_tracker.js  co7_tracker.json  co7_tracker.py
parasramka_erpnext/parasramka_erpnext/doctype/cst_approved_vendor/: cst_approved_vendor.js  cst_approved_vendor.json  cst_approved_vendor.py
parasramka_erpnext/parasramka_erpnext/doctype/cst_bom_item/: cst_bom_item.js  cst_bom_item.json  cst_bom_item.py
parasramka_erpnext/parasramka_erpnext/doctype/cst_cost_sheet/: cst_cost_sheet.js  cst_cost_sheet.json  cst_cost_sheet.py
parasramka_erpnext/parasramka_erpnext/doctype/psd_tracker/: psd_tracker.js  psd_tracker.json  psd_tracker.py
parasramka_erpnext/parasramka_erpnext/doctype/tender_management/: tender_management.js  tender_management.json  (+1 more)
parasramka_erpnext/parasramka_erpnext/print_format/: bulk_lot_offer.html  dp_request.html  drawing_spec_request.html  lot_request.html  payment_request.html  proof_schedule_request.html  rm_offer_customer.html  rm_offer_nabl_lab.html
parasramka_erpnext/public/js/: quotation_claude.js
(+31 files in other folders)
