[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "parasramka_erpnext"
version = "0.0.1"
description = "Custom ERP for Parasramka Engineering Pvt. Ltd."
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Parasramka Engineering Pvt. Ltd.", email = "aviral.parasramka@gmail.com" }
]
dependencies = []

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<=17.0.0"

[tool.setuptools.packages.find]
where = ["."]
include = ["parasramka_erpnext*"]
