[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "parasramka_erpnext"
version = "0.0.1"
description = "Custom ERP for Parasramka Engineering Pvt. Ltd."
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Parasramka Engineering Pvt. Ltd.", email = "aviral.parasramka@gmail.com"}
]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["parasramka_erpnext*"]
